# xeus-stata

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GITHUB_CLEANUP_REPORT.md  LICENSE  OUTPUT_ANALYSIS.md  PHASE3_SUMMARY.md  README.md  RICH_OUTPUT_PLAN.md  SIDE_BY_SIDE_COMPARISON.txt  STATA_HTML_TABLE_RESEARCH.md  capture_kernel_output.py  compare_outputs.py  kernel_output_capture.json  pixi.toml  show_hex_dump.py  show_message_structure.py  stata_raw_output_analysis.txt  test_comprehensive.py  test_graph_output.py  test_html_output.py  test_html_table_export.do  test_inline_plot.md  test_phase3.do  test_plot.do  test_table_scope.do  test_tables.py
docs/development/implementation/: IMPLEMENTATION_SUMMARY.md
docs/development/research/: CAPTURE_SUMMARY.md  STATA_COMMAND_MATRIX.md  STATA_HTML_QUICK_REF.md  STDOUT_CAPTURE_INVESTIGATION.md  TABLE_COLLECT_QUICK_ANSWERS.md  TABLE_INVESTIGATION_INDEX.md  TABLE_VS_ETABLE_INVESTIGATION.md
include/xeus-stata/: base64.hpp  completion.hpp  inspection.hpp  stata_parser.hpp  stata_session.hpp  xeus_stata_config.hpp  xinterpreter.hpp
share/jupyter/kernels/xeus-stata/: kernel.json.in
src/: base64.cpp  completion.cpp  inspection.cpp  main.cpp  stata_parser.cpp  stata_session.cpp  xinterpreter.cpp
test/: CMakeLists.txt
